<resources>
    <string name="app_name">Prez</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_id">Enter your mobile number</string>
    <string name="password">Password</string>
    <string name="no_user">User doesn\'t exist</string>
    <string name="username_error">Mobile number cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="valid_mobile">Should be of 10 numbers</string>
    <string name="valid_password">Should be atleast 6 characters long</string>

    <string name="network_error">A network error has occurred.</string>
    <string name="request_error">Connection timed out.</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_dashboard">Shikshitha - Prez Control</string>

    <string name="one">Send Homework</string>
    <string name="two">Send Students Pswd</string>
    <string name="two_half">Send UnLogged Stds Pswd</string>
    <string name="three">Send Class Pswd</string>
    <string name="three_half">Send UnLogged Class Pswd</string>
    <string name="four">Send Section Pswd</string>
    <string name="five">Send Student Pswd</string>
    <string name="six">Send Teachers Pswd</string>
    <string name="six_half">Send UnLogged Tchrs Pswd</string>
    <string name="seven">Send Teacher Pswd</string>
    <string name="eight">Update Students Pswd</string>
    <string name="nine">Update Class Pswd</string>
    <string name="ten">Update Section Pswd</string>
    <string name="eleven">Update Student Pswd</string>
    <string name="twelve">Update Teachers Pswd</string>
    <string name="thirteen">Update Teacher Pswd</string>
    <string name="sms_sent">Total SMS sent</string>

    <string name="select_school">Select School</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="select_student">Select Student</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="manage_version">Manage App Version</string>

    <string name="ver_id">Version Id</string>
    <string name="ver_name">Version Name</string>
    <string name="appname">App Name</string>
    <string name="ver_status">Version Status</string>

    <string name="logout">Logout</string>
    <string name="title_activity_version">App Version Control</string>

</resources>
