<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shikshitha.shikshithaadmin.dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/select_school"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/school_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/select_class"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/class_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/select_section"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/section_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/select_student"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/student_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/select_teacher"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/teacher_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_small" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/green_btn_ripple"
            android:onClick="manageVersion"
            android:text="@string/manage_version"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_medium" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
