<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/version_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small">

        <EditText
            android:id="@+id/version_id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ver_id"
            android:imeOptions="actionNext"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small">

        <EditText
            android:id="@+id/version_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ver_name"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/version_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small">

        <EditText
            android:id="@+id/version_status_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ver_status"
            android:imeOptions="actionDone"
            android:maxLength="10"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>